# BacktestSuite

./: .gitignore  BacktestSuite.sln  CMakeLists.txt  README.md
Backtester/: CMakeLists.txt
Backtester/include/: LogMacros.h  Logger.h
Backtester/src/: Backtester.cpp  Logger.cpp
DataDownloader/: DataDownloader.py  DataDownloader.pyproj  requirements.txt
